[workspace]
members = [
    "contracts/shared",
    "contracts/invoice_nft",
    "contracts/marketplace",
    "contracts/financing_pool",
    "contracts/treasury",
    "contracts/risk_registry",
    "contracts/access_control",
    "contracts/price_oracle",
    "contracts/tests",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
