[package]
name = "kora-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
kora-shared = { path = "../shared" }
kora-invoice-nft = { path = "../invoice_nft" }
kora-marketplace = { path = "../marketplace" }
kora-financing-pool = { path = "../financing_pool" }
kora-treasury = { path = "../treasury" }
kora-risk-registry = { path = "../risk_registry" }
kora-access-control = { path = "../access_control" }
